[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rence"
version = "0.1.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "**re**pl for scie**nce** is a repl designed for scientific computing."
readme = "README.md"
keywords = ["repl", "science"]
requires-python = ">3.8"
dependencies = [
    "textual[dev]"
]



[project.optional-dependencies]
dev = ["neovim", "flit"]

[tool.setuptools.packages.find]
where = ["src/"]

[project.scripts]
joinpdf = "rence.cli:cli"
